# instagram-inbox-kit

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SETUP.md  config.example.json  pyproject.toml  requirements.txt
examples/: Instagram Inbox.xlsx  README.md  books.master.json  captures.jsonl  corrections.jsonl  metrics.json
examples/lists/: AI Ideas.md  Books.md  Finance.md  Pow World.md  Research.md  Restaurants.md
scheduling/: cron.md  launchd.plist
scripts/: run.sh
src/ig_inbox/: __init__.py  assess.py  backfill_reclassify.py  build_lists.py  build_workbook.py  challenge.py  config.py  deepgram.py  digest.py  doctor.py  enrich_books.py  enrich_restaurants.py  extract.py  feedback.py  ig_client.py  ig_login.py  ocr.py  ocr.swift  pipeline.py  route_store.py  run.py  setup_cli.py  whisper.py
src/ig_inbox/adapters/: __init__.py  enrich.py  kb.py  llm.py  notify.py
tests/: conftest.py  test_digest_schema.py  test_feedback.py  test_links.py  test_store_lock.py  test_workbook.py
